fixed import error

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,11 @@ output_dir = ines/locale
 previous = true
 
 [nosetests]
-match=^test
-where=ines
-nocapture=1
-cover-package=ines
-cover-erase=1
+match = ^test
+where = ines
+nocapture = 1
+cover-package = ines
+cover-erase = 1
+
+[easy_install]
+
